welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: value c is not a member of object java.awt.Color
      while ( ! isFacingTrail(Color.c)) {
                                    ^SlugSnail:18: error: value c is not a member of object java.awt.Color
    if (getCouleurSol() == Color.c) {vert = true}
                                 ^