welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
     do {
      while ( ! isFacingTrail(Color.c)) {
      gauche() 
      }
      avance()
      
    } while( ! estSurBiscuit())
  prendBiscuit()
 }


def isFacingTrail(c:Color):Boolean = {
    if (estFaceMur()){return false}
  	var vert = false
  	avance()
    if (getCouleurSol() == Color.c) {vert = true}
  	recule()
  	return vert
  
}